# fish-cgi

./: .clang-format  .editorconfig  .gitmodules  CMakeLists.txt  README.md  fish_cgi.cpp  flake.nix  main.cpp
examples/: index.fish
nginx/: nginx.conf
